03. Sonarqube/05. sonarqube-ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: sonaqube-ingress
  namespace: sonarqube
spec:
  virtualhost:
    fqdn: sonarqube.atostask.com
  routes:
    - conditions:
      - prefix: /
      services:
        - name: sonarqube-sonarqube
          port: 9000
---
# or you can use this
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-ingress
  namespace: sonarqube
spec:
  rules:
    - host: sonarqube.atos.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarqube-sonarqube
                port:
                  number: 9000
